# DatArg

./: .env.example  .gitignore  Makefile  README.md  capacitor.config.json  drizzle.config.ts  index.html  package-lock.json  package.json  pyproject.toml  vercel.json  vite.config.js
android/: capacitor.settings.gradle  keystore.properties.example
assets/: index-DvKPMlyX.css
data/: consolidated_debt.csv  inflation.csv  interest_rates.csv  manifest.json  trade.csv
db/: client.ts  schema.ts
docs/: automatic_updates.md  automation_report.md  database.md  google_play_release.md  methodologies.md  mobile_foundation.md  native_apps.md  push-notifications.md  source_inventory.md  stage2_consolidated_debt.md  stage2_country_risk.md  stage2_emae.md  stage2_exchange_rates.md  stage2_fiscal.md  stage2_gdp.md  stage2_industry.md  stage2_inflation.md  stage2_interest_rates.md  stage2_labor.md  stage2_markets.md  stage2_net_reserves.md  stage2_poverty.md  stage2_public_debt.md  stage2_public_investment.md  stage2_reserves.md  stage2_trade.md  stage2_wages.md
drizzle/: 20260723210606_initial_datarg_database.sql  20260723212107_dataset_import_status.sql
ios/: .gitignore
metadata/: sources.json
tests/: test_consolidated_debt.py  test_country_risk.py  test_emae.py  test_exchange_rates.py  test_fiscal.py  test_gdp.py  test_industry.py  test_inflation.py  test_interest_rates.py  test_labor.py  test_markets.py  test_mobile_foundation.py  test_native_projects.py  test_net_reserves.py  test_notifications.py  test_poverty.py  test_public_debt.py  test_public_investment.py  (+4 more)
(+92 files in other folders)
