[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "argentina-economic-data"
version = "0.2.0"
description = "Pipelines reproducibles de datos económicos oficiales de Argentina"
requires-python = ">=3.11"
dependencies = ["pandas>=2.2,<3", "xlrd>=2.0.1,<3", "openpyxl>=3.1,<4", "pypdf[crypto]>=5,<7"]

[project.scripts]
aed = "argentina_economic_data.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
